k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bmi-deployment
  namespace: bmi-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: bmi-app
  template:
    metadata:
      labels:
        app: bmi-app
    spec:
      containers:
      - name: bmi-app
        image: europe-west1-docker.pkg.dev/bmi-final-proje/bmi-repo/bmi-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
