k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bmi-network-policy
  namespace: bmi-app
spec:
  podSelector:
    matchLabels:
      app: bmi-mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: bmi-app
    ports:
    - protocol: TCP
      port: 3306
